--- a/package.json
+++ b/package.json
@@ -24,24 +24,51 @@
     ]
   },
   "devDependencies": {
-    "github-markdown-css": "^5.2.0",
+    "@types/estree": "^1.0.5",
+    "@types/estree-jsx": "^1.0.5",
+    "@types/hast": "^2.3.4",
+    "@types/jsdom": "^21.1.6",
+    "@types/lodash": "^4.14.191",
+    "@types/masonry-layout": "^4.2.5",
+    "@types/mdast": "^3.0.11",
+    "@types/node": "^17.0.39",
+    "@types/prismjs": "^1.26.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "dayjs": "^1.11.2",
     "esast": "^0.1.0",
     "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "estree-util-is-identifier-name": "^2.1.0",
     "estree-util-to-js": "^2.0.0",
+    "estree-util-value-to-estree": "^2.1.0",
     "estree-util-visit": "^2.0.0",
+    "github-markdown-css": "^5.2.0",
     "hast": "^1.0.0",
     "hast-util-raw": "^8.0.0",
     "hast-util-to-estree": "^3.1.0",
     "hast-util-to-html": "^9.0.0",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
+    "lint-staged": "^15.2.2",
+    "mdast": "^3.0.0",
     "mdast-util-mdx": "^2.0.1",
     "mdast-util-to-hast": "^13.1.0",
     "mdast-util-to-string": "^3.2.0",
     "mdast-util-toc": "^7.0.0",
+    "prettier": "^3.2.5",
     "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-format": "^4.0.1",
+    "rehype-highlight": "^6.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-mathjax": "^6.0.0",
     "rehype-raw": "^7.0.0",
@@ -49,57 +76,34 @@
     "rehype-remove-comments": "^5.0.0",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
+    "release-it": "^17.1.1",
     "remark-breaks": "^3.0.2",
     "remark-directive": "^2.0.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-mdx": "^2.3.0",
+    "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
     "retext": "^8.1.0",
+    "rimraf": "^5.0.5",
     "styled-components": "^6.1.8",
     "to-vfile": "^7.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "unified": "^10.1.2",
     "unified-prettier": "^2.0.1",
     "unist-util-visit": "^4.1.2",
     "unist-util-visit-parents": "^5.1.3",
+    "vfile": "^5.3.7",
     "vfile-reporter": "^7.0.5",
+    "vite": "^4.2.1",
     "vitest": "^1.4.0",
     "yaml": "^2.2.1",
-    "@types/estree": "^1.0.5",
-    "@types/estree-jsx": "^1.0.5",
-    "@types/hast": "^2.3.4",
-    "@types/prismjs": "^1.26.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.14.191",
-    "@types/masonry-layout": "^4.2.5",
-    "@types/mdast": "^3.0.11",
-    "@types/node": "^17.0.39",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.0",
-    "estree-util-is-identifier-name": "^2.1.0",
-    "estree-util-value-to-estree": "^2.1.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "mdast": "^3.0.0",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "rehype-highlight": "^6.0.0",
-    "release-it": "^17.1.1",
-    "remark-frontmatter": "^4.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.1",
-    "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "vfile": "^5.3.7",
-    "vite": "^4.2.1"
+    "esbuild-plugin-less": "^1.3.3"
+  },
+  "dependencies": {
+    "chokidar": "^3.6.0"
   }
 }
